--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">UsersSP</string>
+    <string name="sp_first_time">first_time</string>
+    <string name="dialog_title">Registro de usuario</string>
+    <string name="dialog_confirm">Registrar</string>
+    <string name="helper_username">Obligatorio</string>
+    <string name="hint_username">Nombre de usuario\n</string>
+    <string name="sp_username">username</string>
+    <string name="register_success">Usuario Registrado</string>
+    <string name="guest">Invitado</string>
+    <string name="register_invalid">Ingrese un nombre</string>
 </resources>
